--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
     "public": "public",
+    "site": "memorygame-bec6d",
     "ignore": [
       "firebase.json",
       "**/.*",
